# rpg_cpp_project

./: CMakeLists.txt  README.md  error_log.txt
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
include/rpg/: Ally.h  Character.h  Difficulty.h  Enemy.h  Factories.h  GameManager.h  Inventory.h  Items.h  Location.h  NPC.h  Observers.h  Player.h  SaveSystem.h
src/: Ally.cpp  Difficulty.cpp  Enemy.cpp  Factories.cpp  GameManager.cpp  Inventory.cpp  Items.cpp  Observers.cpp  Player.cpp  SaveSystem.cpp  main.cpp
